Lab 2: Refactor reusability of pieces.